Fixed all the resource errors in testfiles.

--- a/test/testfiles/common/aAdjacentWithSameResourceShouldBeCombined-fail-2.html
+++ b/test/testfiles/common/aAdjacentWithSameResourceShouldBeCombined-fail-2.html
@@ -3,13 +3,12 @@
     
     <head>
         <title>aAdjacentWithSameResourceShouldBeCombined-fail-2</title>
-        <link rel="stylesheet"
-        href="../../../libs/qunit/qunit.css" media="screen">
+        <link rel="stylesheet" href="../../../lib/qunit/qunit/qunit.css" media="screen">
     </head>
     
     <body>
         <p>
-<a href="products.html"><img src="resources/icon.gif" alt="" /></a>
+<a href="products.html"><img src="resources/go.gif" alt="" /></a>
 
             <a
             href="products.html">Products page</a>
