--- a/test/testfiles/common/aImgAltNotRepetative-pass.html
+++ b/test/testfiles/common/aImgAltNotRepetative-pass.html
@@ -9,7 +9,7 @@
     
     <body>
         <p>
-<a href="page1.html"><img src="resources/star.jpg" alt=""/>page1</a>
+<a href="page1.html"><img src="resources/rex.jpg" alt=""/>page1</a>
 
         </p>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
