--- a/test/testfiles/common/aLinkTextDoesNotBeginWithRedundantWord-pass-2.html
+++ b/test/testfiles/common/aLinkTextDoesNotBeginWithRedundantWord-pass-2.html
@@ -8,7 +8,7 @@
     </head>
     
     <body>
-        <p><a href="home.html"><img src="resources/home.jpg" alt="home page"/></a>
+        <p><a href="home.html"><img src="resources/star.gif" alt="home page"/></a>
         </p>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
