--- a/test/testfiles/common/aSuspiciousLinkText-pass-2.html
+++ b/test/testfiles/common/aSuspiciousLinkText-pass-2.html
@@ -9,7 +9,7 @@
     
     <body>
         <p>This is the introduction to a news story about recent spending by our
-            government.<a href="spending.html"><img src="resources/more.gif" width="30" height="10" alt="government spending"/></a>
+            government.<a href="spending.html"><img src="resources/go.gif" width="30" height="10" alt="government spending"/></a>
         </p>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
