--- a/test/testfiles/common/bodyMustNotHaveBackground-fail.html
+++ b/test/testfiles/common/bodyMustNotHaveBackground-fail.html
@@ -7,7 +7,7 @@
         media="screen">
     </head>
     
-    <body background="resources/background.jpg">
+    <body background="resources/rex.jpg">
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
         <script id="qunit-composite" src="../../composite.js"></script>
