--- a/test/testfiles/common/cssDocumentMakesSenseStyleTurnedOff-fail.html
+++ b/test/testfiles/common/cssDocumentMakesSenseStyleTurnedOff-fail.html
@@ -3,7 +3,7 @@
     
     <head>
         <title>cssDocumentMakesSenseStyleTurnedOff-fail</title>
-        <link href="docB" rel="stylesheet">
+        <link href="resources/style.css" rel="stylesheet">
         <link id="qunit-style" rel="stylesheet" href="../../../lib/qunit/qunit/qunit.css"
         media="screen">
     </head>
