--- a/test/testfiles/common/cssDocumentMakesSenseStyleTurnedOff-pass.html
+++ b/test/testfiles/common/cssDocumentMakesSenseStyleTurnedOff-pass.html
@@ -3,7 +3,7 @@
     
     <head>
         <title>cssDocumentMakesSenseStyleTurnedOff-pass</title>
-        <link href="docB" rel="foo">
+        <link href="resources/style.css" rel="foo">
         <link id="qunit-style" rel="stylesheet" href="../../../lib/qunit/qunit/qunit.css"
         media="screen">
     </head>
