--- a/test/testfiles/common/imageMapServerSide-pass.html
+++ b/test/testfiles/common/imageMapServerSide-pass.html
@@ -9,7 +9,7 @@
     
     <body>
         <p>
-            <img src="resources/map.gif" ismap alt="map of the country" />
+            <img src="resources/map.png" ismap alt="map of the country" />
         </p>
         <p><a href="eastcoast.html">East Coast</a> | <a href="central.html">Central</a> |
             <a
