--- a/test/testfiles/common/imgAltIdentifiesLinkDestination-fail.html
+++ b/test/testfiles/common/imgAltIdentifiesLinkDestination-fail.html
@@ -8,7 +8,7 @@
     </head>
     
     <body>
-        <p><a href="routes.html"><img src="resources/topo.gif" alt="Current routes at Boulders Climbing Gym" /></a>
+        <p><a href="routes.html"><img src="resources/map.png" alt="Current routes at Boulders Climbing Gym" /></a>
         </p>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
@@ -17,7 +17,7 @@
         <script id="qunit-script">
             test('imgAltIdentifiesLinkDestination', function() {
               quailTest.runTest( 'imgAltIdentifiesLinkDestination', '15-2.html');
-              equal(quailTest.results[quailTest.testName][0].attr('src'), 'resources/topo.gif', 'Item attribute check');
+              equal(quailTest.results[quailTest.testName][0].attr('src'), 'resources/map.png', 'Item attribute check');
             });
         </script>
     </body>
