--- a/test/testfiles/common/imgImportantNoSpacerAlt-pass-2.html
+++ b/test/testfiles/common/imgImportantNoSpacerAlt-pass-2.html
@@ -8,7 +8,7 @@
     </head>
     
     <body>
-        <img src="big-fail.png" alt="" />
+        <img src="resources/big-fail.png" alt="" />
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
         <script id="qunit-composite" src="../../composite.js"></script>
