--- a/test/testfiles/common/imgMapAreasHaveDuplicateLink-fail.html
+++ b/test/testfiles/common/imgMapAreasHaveDuplicateLink-fail.html
@@ -19,7 +19,7 @@
             </map>
         </p>
         <p>
-            <img src="resources/navigation.gif" usemap="#imagemap" alt="navigation"
+            <img src="resources/navigation.png" usemap="#imagemap" alt="navigation"
             />
         </p>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
@@ -29,7 +29,7 @@
         <script id="qunit-script">
             test('imgMapAreasHaveDuplicateLink', function() {
               quailTest.runTest( 'imgMapAreasHaveDuplicateLink', '13-1.html');
-              equal(quailTest.results[quailTest.testName][0].attr('src'), 'resources/navigation.gif', 'Item attribute check');
+              equal(quailTest.results[quailTest.testName][0].attr('src'), 'resources/navigation.png', 'Item attribute check');
             });
         </script>
     </body>
