--- a/test/testfiles/common/imgMapAreasHaveDuplicateLink-pass.html
+++ b/test/testfiles/common/imgMapAreasHaveDuplicateLink-pass.html
@@ -19,7 +19,7 @@
             </map>
         </p>
         <p>
-            <img src="resources/navigation.gif" usemap="#imagemap" alt="navigation"
+            <img src="resources/navigation.png" usemap="#imagemap" alt="navigation"
             />
         </p>
         <p><a href="horses.html">Horses</a> | <a href="dogs.html">Dogs</a> | <a href="birds.html">Birds</a>
