--- a/test/testfiles/common/imgWithMathShouldHaveMathEquivalent-fail.html
+++ b/test/testfiles/common/imgWithMathShouldHaveMathEquivalent-fail.html
@@ -8,11 +8,8 @@
     </head>
     
     <body>
-        <p>The following image shows the solution to the quadratic equation: begin
-            fraction minus b plus or minus begin square root of b squared minus four
-            a c end square root over 2 a end fraction</p>
-        <img src="resources/quadeqn.png"
-        alt="solution to the quadratic equation" width="179" height="63" />
+        <p>The following image shows the uncertainty principle:</p>
+        <img src="resources/math.png" alt="the heisenberg uncertainty principle"/>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
         <script id="qunit-composite" src="../../composite.js"></script>
