--- a/test/testfiles/common/objectMustContainText-fail-2.html
+++ b/test/testfiles/common/objectMustContainText-fail-2.html
@@ -9,7 +9,7 @@
     
     <body>
         <object classid="http://www.miamachina.it/analogclock.py" title="a clock object">
-            <img src="resources/clock.gif" />
+            <img src="resources/clock.png" />
         </object>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
