--- a/test/testfiles/common/skipToContentLinkProvided-fail.html
+++ b/test/testfiles/common/skipToContentLinkProvided-fail.html
@@ -9,7 +9,7 @@
     
     <body>
         <p>
-            <img src="resources/logo.jpg" width="50" height="50" alt="company logo"
+            <img src="resources/logo.png" width="50" height="50" alt="company logo"
             />
         </p>
         <ul>
