--- a/test/testfiles/common/skipToContentLinkProvided-pass.html
+++ b/test/testfiles/common/skipToContentLinkProvided-pass.html
@@ -11,7 +11,7 @@
         <p><a href="#content"><img src="resources/spacer.gif" width="0" height="0" border="0" alt="skip to content" /></a>
         </p>
         <p>
-            <img src="resources/logo.jpg" width="50" height="50" alt="company logo"
+            <img src="resources/logo.png" width="50" height="50" alt="company logo"
             />
         </p>
         <ul class="navigation links">
