--- a/test/testfiles/common/tableLayoutMakesSenseLinearized-fail.html
+++ b/test/testfiles/common/tableLayoutMakesSenseLinearized-fail.html
@@ -11,7 +11,7 @@
         <table>
             <tr>
                 <td>
-                    <img src="resources/logo.gif" alt="XYZ mountaineering" />
+                    <img src="resources/logo.png" alt="XYZ mountaineering" />
                 </td>
                 <td>top!</td>
             </tr>
