--- a/test/testfiles/common/tableLayoutMakesSenseLinearized-pass.html
+++ b/test/testfiles/common/tableLayoutMakesSenseLinearized-pass.html
@@ -11,7 +11,7 @@
         <table>
             <tr>
                 <td colspan="2">
-                    <img src="resources/logo.gif" alt="XYZ mountaineering" />
+                    <img src="resources/logo.png" alt="XYZ mountaineering" />
                 </td>
             </tr>
             <tr>
