--- a/test/testfiles/quail/imgAltTextNotRedundant-fail.html
+++ b/test/testfiles/quail/imgAltTextNotRedundant-fail.html
@@ -10,7 +10,7 @@
     
     <body>
 
-        <img src="../oac/rex.jpg" alt="this is an image of rex">
+        <img src="../common/resources/rex.jpg" alt="this is an image of rex">
         <img src="../oac/me.jpg" alt="this is an image of rex">
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
