--- a/test/testfiles/quail/preFilter.html
+++ b/test/testfiles/quail/preFilter.html
@@ -9,7 +9,7 @@
     <body>
         <div class="test-area">
             <p>This is an image
-                <img src="../oac/rex.jpg">.</p>
+                <img src="../common/resources/rex.jpg">.</p>
         </div>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
