--- a/test/testfiles/common/aAdjacentWithSameResourceShouldBeCombined-fail.html
+++ b/test/testfiles/common/aAdjacentWithSameResourceShouldBeCombined-fail.html
@@ -3,13 +3,12 @@
     
     <head>
         <title>aAdjacentWithSameResourceShouldBeCombined-fail</title>
-        <link rel="stylesheet"
-        href="../../../lib/qunit/qunit/qunit.css" media="screen">
+        <link rel="stylesheet" href="../../../lib/qunit/qunit/qunit.css" media="screen">
     </head>
     
     <body>
         <p>
-<a href="products.html"><img src="resources/icon.gif" alt="Products page" /></a>
+<a href="products.html"><img src="resources/go.gif" alt="Products page" /></a>
 
             <a
             href="products.html">Products page</a>
