--- a/test/testfiles/common/aAdjacentWithSameResourceShouldBeCombined-pass.html
+++ b/test/testfiles/common/aAdjacentWithSameResourceShouldBeCombined-pass.html
@@ -3,13 +3,12 @@
     
     <head>
         <title>aAdjacentWithSameResourceShouldBeCombined-pass</title>
-        <link rel="stylesheet"
-        href="../../../lib/qunit/qunit/qunit.css" media="screen">
+        <link rel="stylesheet" href="../../../lib/qunit/qunit/qunit.css" media="screen">
     </head>
     
     <body>
         <p>
-<a href="products.html"><img src="resources/icon.gif" alt="" />Products page</a>
+<a href="products.html"><img src="resources/go.gif" alt="" />Products page</a>
 
         </p>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
