--- a/test/testfiles/common/aMustContainText-pass-2.html
+++ b/test/testfiles/common/aMustContainText-pass-2.html
@@ -8,7 +8,7 @@
     </head>
     
     <body>
-        <p>Select link for more information about dogs.<a href="dogs.html"><img src="resources/dog.jpg" alt="more information about dogs"/></a>
+        <p>Select link for more information about dogs.<a href="dogs.html"><img src="resources/rex.jpg" alt="more information about dogs"/></a>
         </p>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
