--- a/test/testfiles/common/imageMapServerSide-fail.html
+++ b/test/testfiles/common/imageMapServerSide-fail.html
@@ -9,7 +9,7 @@
     
     <body>
         <p>
-            <img src="resources/map.gif" ismap alt="map of the country" />
+            <img src="resources/map.png" ismap alt="map of the country" />
         </p>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
