--- a/test/testfiles/common/imgMapAreasHaveDuplicateLink-fail-2.html
+++ b/test/testfiles/common/imgMapAreasHaveDuplicateLink-fail-2.html
@@ -19,7 +19,7 @@
             </map>
         </p>
         <p>
-            <img src="resources/navigation.gif" usemap="#imagemap" alt="navigation"
+            <img src="resources/navigation.png" usemap="#imagemap" alt="navigation"
             />
         </p>
         <p><a href="horses.html">Horses</a> | <a href="dogs.html">Dogs</a>
@@ -31,7 +31,7 @@
         <script id="qunit-script">
             test('imgMapAreasHaveDuplicateLink', function() {
               quailTest.runTest( 'imgMapAreasHaveDuplicateLink', '13-3.html');
-              equal(quailTest.results[quailTest.testName][0].attr('src'), 'resources/navigation.gif', 'Item attribute check');
+              equal(quailTest.results[quailTest.testName][0].attr('src'), 'resources/navigation.png', 'Item attribute check');
             });
         </script>
     </body>
