--- a/test/testfiles/quail/guidelineFallback.html
+++ b/test/testfiles/quail/guidelineFallback.html
@@ -10,7 +10,7 @@
         <div class="test-area">
             <p>This is a paragraph.</p>
             <p class="error">This is a paragraph we are testing for.
-                <img src="../oac/rex.jpg" />
+                <img src="../common/resources/rex.jpg" />
             </p>
             	<h2 class="callback-error">Heading!</h2>
 
