--- a/test/testfiles/quail/guidelineLoading.html
+++ b/test/testfiles/quail/guidelineLoading.html
@@ -11,10 +11,9 @@
     
     <body>
         <p>
-            <img src="../oac/rex.jpg" />
+            <img src="../common/resources/rex.jpg" />
         </p>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
-        <script id="qunit-events" src="../../../libs/jquery.hasEventListener/jquery.hasEventListener-2.0.3.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
         <script id="qunit-composite" src="../../composite.js"></script>
         <script id="qunit-qunit" src="../../../lib/qunit/qunit/qunit.js"></script>
