--- a/test/testfiles/quail/headersHaveText-fail2.html
+++ b/test/testfiles/quail/headersHaveText-fail2.html
@@ -13,7 +13,7 @@
 
             <p>Intrinsicly actualize web-enabled users and cross functional growth strategies.
                 Monotonectally simplify B2B opportunities vis-a-vis top-line processes.</p>
-            	<h2><img src="rex.jpg"></h2>
+            	<h2><img src="../common/resources/rex.jpg"></h2>
 
             <p>Globally synergize ethical process improvements before go forward technology.
                 Synergistically seize backward-compatible quality vectors through magnetic
