--- a/test/testfiles/quail/imgAltTextNotRedundant-pass.html
+++ b/test/testfiles/quail/imgAltTextNotRedundant-pass.html
@@ -10,8 +10,8 @@
     
     <body>
 
-        <img src="../oac/rex.jpg" alt="this is an image of rex">
-        <img src="../oac/rex.jpg" alt="this is an image of rex">
+        <img src="../common/resources/rex.jpg" alt="this is an image of rex">
+        <img src="../common/resources/rex.jpg" alt="this is an image of rex">
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
         <script id="qunit-composite" src="../../composite.js"></script>
