Got focus tests to work, in a sad way.

--- a/test/testfiles/common/focusIndicatorVisible-fail-3.html
+++ b/test/testfiles/common/focusIndicatorVisible-fail-3.html
@@ -2,7 +2,7 @@
 <html>
     
     <head>
-        <title>focusIndicatorVisible-fail</title>
+        <title>focusIndicatorVisible-fail-3</title>
         <link rel="stylesheet" href="../../../lib/qunit/qunit/qunit.css"
         media="screen">
         <style>
@@ -18,7 +18,7 @@
     
     <body>
         <div id="quail-scope">
-            <a href="somewhere">This link is highly visible when it gets focus</a>
+            <a href="somewhere">This link doesn't change much on focus</a>
             <form>
                 <label for="input">An input element with a bad focus</label>
                 <input type="text" id="input">
