--- a/test/quail.html
+++ b/test/quail.html
@@ -245,12 +245,6 @@
             "testfiles/common/fileHasLabel-pass.html",
             "testfiles/common/fileLabelIsNearby-fail.html",
             "testfiles/common/fileLabelIsNearby-pass.html",
-            "testfiles/common/focusIndicatorVisible-pass.html",
-            "testfiles/common/focusIndicatorVisible-fail.html",
-            "testfiles/common/focusIndicatorVisible-pass-2.html",
-            "testfiles/common/focusIndicatorVisible-pass-3.html",
-            "testfiles/common/focusIndicatorVisible-fail-2.html",
-            "testfiles/common/focusIndicatorVisible-fail-3.html",
             "testfiles/common/fontIsNotUsed-fail.html",
             "testfiles/common/fontIsNotUsed-pass.html",
             "testfiles/common/formDeleteIsReversable-fail-2.html",
@@ -562,7 +556,9 @@
             "testfiles/common/textareaLabelPositionedClose-fail.html",
             "testfiles/common/textareaLabelPositionedClose-pass.html"
    	]);
+    
       if(navigator.userAgent.search('PhantomJS') !== -1) {
+        //These tests won't run well in browsers since they require plugins
             QUnit.testSuites([
                   "testfiles/common/appletContainsTextEquivalent-fail.html",
                   "testfiles/common/appletContainsTextEquivalent-pass.html",
@@ -580,6 +576,17 @@
                   "testfiles/common/appletUIMustBeAccessible-fail.html",
                   "testfiles/common/appletUIMustBeAccessible-pass.html"
             ]);
+      }
+      else {
+        //Unfortunately PhantomJS doesn't play nicely with focus, for now its browser only
+        QUnit.testSuites([
+          "testfiles/common/focusIndicatorVisible-pass.html",
+          "testfiles/common/focusIndicatorVisible-fail.html",
+          "testfiles/common/focusIndicatorVisible-pass-2.html",
+          "testfiles/common/focusIndicatorVisible-pass-3.html",
+          "testfiles/common/focusIndicatorVisible-fail-2.html",
+          "testfiles/common/focusIndicatorVisible-fail-3.html"
+        ]);
       }
 	</script>
 </head>
