Per issue http://bugs.jquery.com/ticket/13363, making focus only chrome for now.

--- a/test/quail.html
+++ b/test/quail.html
@@ -577,7 +577,7 @@
                   "testfiles/common/appletUIMustBeAccessible-pass.html"
             ]);
       }
-      else {
+      if(navigator.userAgent.search('Chrome') !== -1) {
         //Unfortunately PhantomJS doesn't play nicely with focus, for now its browser only
         QUnit.testSuites([
           "testfiles/common/focusIndicatorVisible-pass.html",
