Added test for technique H32, closes #68

--- a/test/quail.html
+++ b/test/quail.html
@@ -253,6 +253,10 @@
             "testfiles/common/formErrorMessageHelpsUser-fail.html",
             "testfiles/common/formHasGoodErrorMessage-fail-2.html",
             "testfiles/common/formHasGoodErrorMessage-fail.html",
+            "testfiles/common/formHasSubmitButton-pass.html",
+            "testfiles/common/formHasSubmitButton-pass-2.html",
+            "testfiles/common/formHasSubmitButton-fail.html",
+            "testfiles/common/formHasSubmitButton-fail-2.html",
             "testfiles/common/formWithRequiredLabel-fail-2.html",
             "testfiles/common/formWithRequiredLabel-fail-3.html",
             "testfiles/common/formWithRequiredLabel-fail.html",
