--- a/test/quail.html
+++ b/test/quail.html
@@ -390,6 +390,9 @@
             "testfiles/common/labelMustNotBeEmpty-fail.html",
             "testfiles/common/labelMustNotBeEmpty-pass-2.html",
             "testfiles/common/labelMustNotBeEmpty-pass.html",
+            "testfiles/common/languageDirAttributeIsUsed-pass.html",
+            "testfiles/common/languageDirAttributeIsUsed-fail.html",
+            "testfiles/common/languageDirAttributeIsUsed-fail-2.html",
             "testfiles/common/legendDescribesListOfChoices-fail-2.html",
             "testfiles/common/legendDescribesListOfChoices-fail.html",
             "testfiles/common/legendTextNotEmpty-fail.html",
