Changed button type to reset since IE will change type to "submit" if it's not expected.

--- a/test/testfiles/common/formHasSubmitButton-fail-2.html
+++ b/test/testfiles/common/formHasSubmitButton-fail-2.html
@@ -10,7 +10,7 @@
     <body>
         <p>This form is missing a submit button:</p>
         <form>
-            <label for="search">Search</label> <input type="search" id="search"> <button type="wrong">Search</button>
+            <label for="search">Search</label> <input type="search" id="search"> <button type="reset">Search</button>
         </form>
         <script id="qunit-jquery"
         src="../../../lib/jquery/jquery.js"></script>
