Added LTR text direction support to languageDirAttributeIsUsed. #72

--- a/test/quail.html
+++ b/test/quail.html
@@ -391,8 +391,10 @@
             "testfiles/common/labelMustNotBeEmpty-pass-2.html",
             "testfiles/common/labelMustNotBeEmpty-pass.html",
             "testfiles/common/languageDirAttributeIsUsed-pass.html",
+            "testfiles/common/languageDirAttributeIsUsed-pass-2.html",
             "testfiles/common/languageDirAttributeIsUsed-fail.html",
             "testfiles/common/languageDirAttributeIsUsed-fail-2.html",
+            "testfiles/common/languageDirAttributeIsUsed-fail-3.html",
             "testfiles/common/legendDescribesListOfChoices-fail-2.html",
             "testfiles/common/legendDescribesListOfChoices-fail.html",
             "testfiles/common/legendTextNotEmpty-fail.html",
