--- a/test/quail.html
+++ b/test/quail.html
@@ -395,6 +395,7 @@
             "testfiles/common/languageDirAttributeIsUsed-fail.html",
             "testfiles/common/languageDirAttributeIsUsed-fail-2.html",
             "testfiles/common/languageDirAttributeIsUsed-fail-3.html",
+            "testfiles/common/languageDirAttributeIsUsed-fail-4.html",
             "testfiles/common/legendDescribesListOfChoices-fail-2.html",
             "testfiles/common/legendDescribesListOfChoices-fail.html",
             "testfiles/common/legendTextNotEmpty-fail.html",
