Added test for technique H65, issue #64.

--- a/test/quail.html
+++ b/test/quail.html
@@ -381,6 +381,8 @@
             "testfiles/common/inputTextHasValue-pass.html",
             "testfiles/common/inputTextValueNotEmpty-fail.html",
             "testfiles/common/inputTextValueNotEmpty-pass.html",
+            "testfiles/common/inputWithoutLabelHasTitle-pass.html",
+            "testfiles/common/inputWithoutLabelHasTitle-fail.html",
             "testfiles/common/labelDoesNotContainInput-fail.html",
             "testfiles/common/labelDoesNotContainInput-pass.html",
             "testfiles/common/labelMustBeUnique-fail.html",
