--- a/test/testfiles/common/aLinksToMultiMediaRequireTranscript-fail-2.html
+++ b/test/testfiles/common/aLinksToMultiMediaRequireTranscript-fail-2.html
@@ -16,7 +16,7 @@
         <script id="qunit-script">
             test('aLinksToMultiMediaRequireTranscript', function() {
               quailTest.runTest( 'aLinksToMultiMediaRequireTranscript', '20-3.html');
-              equal(quailTest.results[quailTest.testName][0].attr('href'), 'movie.mpg', 'Item attribute check');
+              equal(quailTest.results[quailTest.testName].elements[0].attr('href'), 'movie.mpg', 'Item attribute check');
             });
         </script>
     </body>
