--- a/test/testfiles/common/documentAbbrIsUsed-fail.html
+++ b/test/testfiles/common/documentAbbrIsUsed-fail.html
@@ -17,7 +17,7 @@
             test('documentAbbrIsUsed', function() {
               quailTest.runTest( 'documentAbbrIsUsed', '98-1.html');
               var pass = false;
-              $.each(quailTest.results.documentAbbrIsUsed, function(index, abbr) {
+              $.each(quailTest.results.documentAbbrIsUsed.elements, function(index, abbr) {
                 if(abbr.hasClass('fail')) {
                   pass = true;
                 }
