--- a/test/testfiles/common/imgAltEmptyForDecorativeImages-fail-4.html
+++ b/test/testfiles/common/imgAltEmptyForDecorativeImages-fail-4.html
@@ -17,7 +17,7 @@
         <script id="qunit-script">
             test('imgAltEmptyForDecorativeImages', function() {
               quailTest.runTest( 'imgAltEmptyForDecorativeImages', '16-4.html');
-              equal(quailTest.results[quailTest.testName][0].attr('src'), 'resources/star.gif', 'Item attribute check');
+              equal(quailTest.results[quailTest.testName].elements[0].attr('src'), 'resources/star.gif', 'Item attribute check');
             });
         </script>
     </body>
