--- a/test/testfiles/common/imgAltIdentifiesLinkDestination-fail.html
+++ b/test/testfiles/common/imgAltIdentifiesLinkDestination-fail.html
@@ -17,7 +17,7 @@
         <script id="qunit-script">
             test('imgAltIdentifiesLinkDestination', function() {
               quailTest.runTest( 'imgAltIdentifiesLinkDestination', '15-2.html');
-              equal(quailTest.results[quailTest.testName][0].attr('src'), 'resources/map.png', 'Item attribute check');
+              equal(quailTest.results[quailTest.testName].elements[0].attr('src'), 'resources/map.png', 'Item attribute check');
             });
         </script>
     </body>
