--- a/test/testfiles/common/imgAltIsSameInText-fail.html
+++ b/test/testfiles/common/imgAltIsSameInText-fail.html
@@ -18,7 +18,7 @@
         <script id="qunit-script">
             test('imgAltIsSameInText', function() {
               quailTest.runTest( 'imgAltIsSameInText', '11-1.html');
-              equal(quailTest.results[quailTest.testName][0].attr('alt'), 'logo', 'Item attribute check');
+              equal(quailTest.results[quailTest.testName].elements[0].attr('alt'), 'logo', 'Item attribute check');
             });
         </script>
     </body>
