--- a/test/testfiles/common/imgHasLongDesc-fail-2.html
+++ b/test/testfiles/common/imgHasLongDesc-fail-2.html
@@ -20,7 +20,7 @@
         <script id="qunit-script">
             test('imgHasLongDesc', function() {
               quailTest.runTest( 'imgHasLongDesc', '8-3.html');
-              equal(quailTest.results[quailTest.testName][0].attr('src'), 'resources/chart.gif', 'Image is chart.gif');
+              equal(quailTest.results[quailTest.testName].elements[0].attr('src'), 'resources/chart.gif', 'Image is chart.gif');
             });
         </script>
     </body>
