--- a/test/testfiles/common/inputTextHasLabel-fail.html
+++ b/test/testfiles/common/inputTextHasLabel-fail.html
@@ -21,7 +21,7 @@
         <script id="qunit-script">
             test('inputTextHasLabel', function() {
               quailTest.runTest( 'inputTextHasLabel', '57-1.html');
-              equal(quailTest.results[quailTest.testName][0].attr('name'), 'firstname', 'Item attribute check');
+              equal(quailTest.results[quailTest.testName].elements[0].attr('name'), 'firstname', 'Item attribute check');
             });
         </script>
     </body>
