Added test to find buttons with no value, content. For issue #66

--- a/test/quail.html
+++ b/test/quail.html
@@ -155,6 +155,9 @@
             "testfiles/common/bodyVisitedLinkColorContrast-pass.html",
             "testfiles/common/boldIsNotUsed-fail.html",
             "testfiles/common/boldIsNotUsed-pass.html",
+            "testfiles/common/buttonHasValue-fail.html",
+            "testfiles/common/buttonHasValue-pass.html",
+            "testfiles/common/buttonHasValue-pass-2.html",
             "testfiles/common/checkboxHasLabel-fail-2.html",
             "testfiles/common/checkboxHasLabel-fail-3.html",
             "testfiles/common/checkboxHasLabel-fail-4.html",
