Added test aLinkWithNonText to capture the rest of F89. Fixes #59.

--- a/test/quail.html
+++ b/test/quail.html
@@ -91,6 +91,9 @@
             "testfiles/common/aLinkTextDoesNotBeginWithRedundantWord-fail.html",
             "testfiles/common/aLinkTextDoesNotBeginWithRedundantWord-pass-2.html",
             "testfiles/common/aLinkTextDoesNotBeginWithRedundantWord-pass.html",
+            "testfiles/common/aLinkWithNonText-fail.html",
+            "testfiles/common/aLinkWithNonText-pass.html",
+            "testfiles/common/aLinkWithNonText-pass-2.html",
             "testfiles/common/aMustContainText-fail-2.html",
             "testfiles/common/aMustContainText-fail-3.html",
             "testfiles/common/aMustContainText-fail.html",
