Added test for fieldsets having a label. #66

--- a/test/quail.html
+++ b/test/quail.html
@@ -243,6 +243,8 @@
             "testfiles/common/emoticonsExcessiveUse-pass.html",
             "testfiles/common/emoticonsMissingAbbr-fail.html",
             "testfiles/common/emoticonsMissingAbbr-pass.html",
+            "testfiles/common/fieldsetHasLabel-fail.html",
+            "testfiles/common/fieldsetHasLabel-pass.html",
             "testfiles/common/fileHasLabel-fail-2.html",
             "testfiles/common/fileHasLabel-fail-3.html",
             "testfiles/common/fileHasLabel-fail-5.html",
