Added test for input buttons with no value attribute. Closes #66

--- a/test/quail.html
+++ b/test/quail.html
@@ -255,6 +255,8 @@
             "testfiles/common/fileLabelIsNearby-pass.html",
             "testfiles/common/fontIsNotUsed-fail.html",
             "testfiles/common/fontIsNotUsed-pass.html",
+            "testfiles/common/formButtonsHaveValue-pass.html",
+            "testfiles/common/formButtonsHaveValue-fail.html",
             "testfiles/common/formDeleteIsReversable-fail-2.html",
             "testfiles/common/formDeleteIsReversable-fail.html",
             "testfiles/common/formErrorMessageHelpsUser-fail-2.html",
