--- a/test/testfiles/common/formButtonsHaveValue-fail.html
+++ b/test/testfiles/common/formButtonsHaveValue-fail.html
@@ -9,7 +9,7 @@
     
     <body>
         <form id="quail-scope">
-        	<input type="reset">
+        	<input type="button">
         </form>
         <script id="qunit-jquery" src="../../../lib/jquery/jquery.js"></script>
         <script id="qunit-quail" src="../../../dist/quail.jquery.js"></script>
