Added test whiteSpaceInWord per issue #73.

--- a/test/quail.html
+++ b/test/quail.html
@@ -576,7 +576,9 @@
             "testfiles/common/textareaHasAssociatedLabel-pass-2.html",
             "testfiles/common/textareaHasAssociatedLabel-pass.html",
             "testfiles/common/textareaLabelPositionedClose-fail.html",
-            "testfiles/common/textareaLabelPositionedClose-pass.html"
+            "testfiles/common/textareaLabelPositionedClose-pass.html",
+            "testfiles/common/whiteSpaceInWord-fail.html",
+            "testfiles/common/whiteSpaceInWord-pass.html"
    	]);
     
       if(navigator.userAgent.search('PhantomJS') !== -1) {
