Made header tests only fail if skipping down over 1 level. #120

--- a/test/quail.html
+++ b/test/quail.html
@@ -284,6 +284,7 @@
             "testfiles/common/headerH3-pass.html",
             "testfiles/common/headerH4-fail.html",
             "testfiles/common/headerH4-pass.html",
+            "testfiles/common/headerH4-pass-2.html",
             "testfiles/common/headerH6Format-fail.html",
             "testfiles/common/headersUseToMarkSections-fail.html",
             "testfiles/common/headersUseToMarkSections-pass-2.html",
