Added explicit header level names to tests, fixes #121

--- a/test/testfiles/common/headerH4-pass.html
+++ b/test/testfiles/common/headerH4-pass.html
@@ -10,7 +10,7 @@
     <body>
         
 <h5>The First Heading</h5>
-
+<p>The first paragraph</p>
         
 <h6>The Second Heading</h6>
 
@@ -19,7 +19,7 @@
         <script id="qunit-composite" src="../../composite.js"></script>
         <script id="qunit-qunit" src="../../../lib/qunit/qunit/qunit.js"></script>
         <script id="qunit-script">
-            test('headerH5', function() {
+            test('headerH4', function() {
               quailTest.runTest('headerH4');
               equal(true, quailTest.confirmIsEmpty(), 'Results are empty');
             });
