Disabled async for getting HTML for now. Look at #122

--- a/test/quail.html
+++ b/test/quail.html
@@ -230,6 +230,8 @@
             "testfiles/common/documentVisualListsAreMarkedUp-pass.html",
             "testfiles/common/documentWordsNotInLanguageAreMarked-fail.html",
             "testfiles/common/documentWordsNotInLanguageAreMarked-pass.html",
+            "testfiles/common/elementsDoNotHaveDuplicateAttributes-pass.html",
+            "testfiles/common/elementsDoNotHaveDuplicateAttributes-fail.html",
             "testfiles/common/embedHasAssociatedNoEmbed-fail.html",
             "testfiles/common/embedHasAssociatedNoEmbed-pass-2.html",
             "testfiles/common/embedHasAssociatedNoEmbed-pass.html",
