Fixed "shadow DOM" traversal, added selector method, updated test for #67.

--- a/test/quail.html
+++ b/test/quail.html
@@ -28,6 +28,8 @@
             "testfiles/quail/headersHaveText-fail.html",
             "testfiles/quail/headersHaveText-fail2.html",
             "testfiles/quail/headersHaveText-pass.html",
+            "testfiles/quail/htmlSource.html",
+            "testfiles/quail/htmlSourceSelectors.html",
             "testfiles/quail/liDontUseImageForBullet-fail.html",
             "testfiles/quail/liDontUseImageForBullet-pass.html",
             "testfiles/quail/labelsAreAssignedToAnInput-pass.html",
