Issue with selector depth in phantom.

--- a/test/testfiles/quail/htmlSourceSelectors.html
+++ b/test/testfiles/quail/htmlSourceSelectors.html
@@ -12,7 +12,7 @@
           <div id="contents">
             <p>First paragraph</p>
             <p>Second paragraph</p>
-            <p>Third paragraph <span class="test">Test inline element</span></p>
+            <p>Third paragraph Test inline element</p>
           </div>
           <ul class="list">
             <li>A</li>
