Added another pass case where the element was outside scope.

--- a/test/quail.html
+++ b/test/quail.html
@@ -233,6 +233,7 @@
             "testfiles/common/documentWordsNotInLanguageAreMarked-fail.html",
             "testfiles/common/documentWordsNotInLanguageAreMarked-pass.html",
             "testfiles/common/elementsDoNotHaveDuplicateAttributes-pass.html",
+            "testfiles/common/elementsDoNotHaveDuplicateAttributes-pass-2.html",
             "testfiles/common/elementsDoNotHaveDuplicateAttributes-fail.html",
             "testfiles/common/embedHasAssociatedNoEmbed-fail.html",
             "testfiles/common/embedHasAssociatedNoEmbed-pass-2.html",
