--- a/test/quail.html
+++ b/test/quail.html
@@ -36,6 +36,7 @@
             "testfiles/quail/labelsAreAssignedToAnInput-fail.html",
             "testfiles/quail/labelsAreAssignedToAnInput-fail2.html",
             "testfiles/quail/labelsAreAssignedToAnInput-fail3.html",
+            "testfiles/quail/quailBuilderTests.html",
             "testfiles/quail/tableUsesScopeForRow-fail.html",
             "testfiles/quail/tableUsesScopeForRow-fail2.html",
             "testfiles/quail/tableUsesScopeForRow-pass.html",
