Issue #118: Using the target attribute to open a new window on user request and indicating this in link text
Signed-off-by: J. Renée Beach <splendidnoise@gmail.com>

--- a/test/quail.html
+++ b/test/quail.html
@@ -430,6 +430,7 @@
             "testfiles/common/marqueeIsNotUsed-pass.html",
             "testfiles/common/menuNotUsedToFormatText-fail.html",
             "testfiles/common/menuNotUsedToFormatText-pass.html",
+            "testfiles/common/newWindowIsOpened.html",
             "testfiles/common/noembedHasEquivalentContent-fail.html",
             "testfiles/common/noembedHasEquivalentContent-pass.html",
             "testfiles/common/objectContentUsableWhenDisabled-fail.html",
