Assigned scripts to unicode blocks, added method to discover document languages.

--- a/test/quail.html
+++ b/test/quail.html
@@ -22,6 +22,9 @@
             "testfiles/quail/ariaOrphanedContent-fail.html",
             "testfiles/quail/cssTextHasContrast-fail.html",
             "testfiles/quail/cssTextHasContrast-pass.html",
+            "testfiles/quail/defaultLanguageFound.html",
+            "testfiles/quail/defaultLanguageFoundFromParent.html",
+            "testfiles/quail/defaultLanguageBrowser.html",
             "testfiles/quail/guidelineLoading.html",
             "testfiles/quail/eventComplete.html",
             "testfiles/quail/eventTester.html",
